Cleanup code (#1389)
* use lambdas instead of anonymous classes

* remove redundant null-checks and simplify check of the substrings

* use predefined charset constant instead of its string representation

* remove unused imports

* use predefined charset constant instead of its string representation

* replace methods that use single-character strings with equivalent ones that use char

* use classes instead of its name when check equality

* remove unnecessary boxig/unboxing

* replace usage of the deprecated method

* iterate by routes entries instead of get route at every iteration

* remove redundant variables

* replace classic for-loop by foreach-loop

* replace calling a few old api methods by the newone from java 8 api

* replace calling a few old api methods by the newone from java 8 api

* remove redundant suppression